--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
+    <title>MuseMorphose</title>
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,8 +26,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">MuseMorphose</h1>
+      <h2 class="project-tagline">Full-Song and Fine-Grained Music Style Transfer with Just One Transformer VAE</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
