--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     {% endif %}
     <meta charset="UTF-8">
     <title>MuseMorphose</title>
+    <link rel="icon" href="../assets/musical-note-svgrepo-com.svg">
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
