--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <title>MuseMorphose</title>
 <!--     <link rel="icon" href="/assets/musical-note-svgrepo-com.svg"> -->
-    <link rel="shortcut icon" type="image/svg+xml" href="/assets/musical-note-svgrepo-com.svg" >
+    <link rel="shortcut icon" type="image/svg+xml" href="../assets/musical-note-svgrepo-com.svg" >
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
