--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #000066 // #159957 !default;
-$header-bg-color-secondary: #333333 // #155799 !default;
+$header-bg-color: #000066; // #159957 !default;
+$header-bg-color-secondary: #333333; // #155799 !default;
 $header-bg-image: url('https://slseanwu.github.io/site-musemorphose/assets/banner_musemorphose.png');
   
 
