--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -6,8 +6,7 @@ $medium-breakpoint: 42em !default;
 $header-heading-color: #fff !default;
 $header-bg-color: #000066; // #159957 !default;
 $header-bg-color-secondary: #333333; // #155799 !default;
-$header-bg-image: url('banner_musemorphose.png');
-  
+$header-bg-image: url('../assets/banner_musemorphose.png');
 
 // Text
 $section-headings-color: #159957 !default;
