--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -109,8 +109,13 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
-//   background-image: linear-gradient(160deg, $header-bg-color-secondary, $header-bg-color), $header-bg-image;
-  background-image: $header-bg-image;
+  background-image: linear-gradient(160deg, $header-bg-color-secondary, $header-bg-color), $header-bg-image;
+//   background-image: $header-bg-image;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
   @include large {
     padding: 5rem 6rem;
