--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -110,7 +110,7 @@ a {
   text-align: center;
   background-color: $header-bg-color;
 //   background-image: linear-gradient(160deg, $header-bg-color-secondary, $header-bg-color), $header-bg-image;
-  background-image: $header-bg-image, linear-gradient(160deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: url('https://i.imgur.com/xKO551c.png'), linear-gradient(160deg, $header-bg-color-secondary, $header-bg-color);
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
