--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -106,7 +106,7 @@ a {
 }
 
 .page-header {
-  
+  opacity: 0.5;
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
