--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -106,7 +106,7 @@ a {
 }
 
 .page-header {
-  opacity: 0.5;
+//   opacity: 0.5;
   color: $header-heading-color;
   text-align: center;
   background-color: $header-bg-color;
@@ -150,19 +150,19 @@ a {
 
 .project-tagline {
   margin-bottom: 2rem;
-  font-weight: normal;
-  opacity: 0.7;
+  font-weight: bold;
+//   opacity: 0.7;
 
   @include large {
-    font-size: 1.25rem;
+    font-size: 1.75rem;
   }
 
   @include medium {
-    font-size: 1.15rem;
+    font-size: 1.5rem;
   }
 
   @include small {
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
 }
 
