--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -134,6 +134,7 @@ a {
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem;
+  text-shadow: 2px 2px 2px rgba(15, 10, 86, 0.8);
 
   @include large {
     font-size: 3.25rem;
@@ -150,19 +151,19 @@ a {
 
 .project-tagline {
   margin-bottom: 2rem;
-  font-weight: bold;
-//   opacity: 0.7;
+  font-weight: normal;
+  opacity: 0.8;
 
   @include large {
-    font-size: 1.75rem;
-  }
-
-  @include medium {
     font-size: 1.5rem;
   }
 
-  @include small {
+  @include medium {
     font-size: 1.25rem;
+  }
+
+  @include small {
+    font-size: 1.15rem;
   }
 }
 
