--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,7 +9,7 @@ $header-bg-color-secondary: #333333; // #155799 !default;
 $header-bg-image: url('https://imgur.com/xKO551c');
 
 // Text
-$section-headings-color: #85069c // #159957 !default;
+$section-headings-color: #85069c; // #159957 !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
