--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,7 +10,7 @@ $header-bg-image: url('https://imgur.com/xKO551c');
 
 // Text
 $section-headings-color: #85069c; // #159957 !default;
-$body-text-color: #606c71 !default;
+$body-text-color: #424b4f !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 
