--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -20,5 +20,5 @@ $code-text-color: #567482 !default;
 
 // Borders
 $border-color: #dce6f0 !default;
-$table-border-color: #e9ebec !default;
+$table-border-color: rgba(255, 255, 255, 0) !default;
 $hr-border-color: #eff0f1 !default;
