--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -326,7 +326,7 @@ a {
     -webkit-overflow-scrolling: touch;
 
     th {
-//       font-weight: bold;
+      font-weight: normal;
       text-align: left;
     }
 
