--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <title>MuseMorphose</title>
 <!--     <link rel="icon" href="/assets/musical-note-svgrepo-com.svg"> -->
     <link rel="shortcut icon" type="image/svg+xml" href="{{ site.baseurl }}/assets/musical-note-svgrepo-com.svg">
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
