--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
         gtag('config', '{{ site.google_analytics }}');
       </script>
     {% endif %}
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101316100);</script>
+    <script async src="//static.getclicky.com/js"></script>
     <meta charset="UTF-8">
     <title>MuseMorphose</title>
 <!--     <link rel="icon" href="/assets/musical-note-svgrepo-com.svg"> -->
